[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent Of Code repo"
authors = ["Andreas Chantzos"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.15.8"
black = "^22.10.0"
parse = "^1.20.0"
numpy = "^1.21.0"
networkx = "^3.2.1"
nographs = "^3.3.0"
advent-of-code-data = "^1.0.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.poetry.scripts]
AOC = "AOC.aoc:run"
